--- a/templates/measure.html
+++ b/templates/measure.html
@@ -40,6 +40,13 @@
       font-size: 20px;
       line-height: 1.6;
     }
+    h3{
+      color: red;
+      text-align: center;
+      margin: 40px 20px 10px;
+      font-size: 20px;
+      line-height: 1.6;
+    }
 
     .container {
       max-width: 800px;
@@ -139,6 +146,7 @@
       Place the <strong>tip</strong> of your index finger inside the red box below<br />
       and click <strong>Start Measurement</strong>. Hold it there for exactly 7 seconds.
     </h2>
+    <h3>NOTE: The accuracy depends on how still and tightly you hold your finger, webcam quality, and light settings.</h3>
 
     <div class="flex-example-video">
       <div>
