--- a/templates/measure.html
+++ b/templates/measure.html
@@ -98,7 +98,7 @@
 
     #overlay-box {
       position: absolute;
-      border: 2px dashed var(--accent);
+      border: 2px dashed red;
       top: 80px;
       left: 50%;
       width: 80px;
