--- a/templates/measure.html
+++ b/templates/measure.html
@@ -8,7 +8,7 @@
    :root {
       --primary: #b6d7a8;
       --secondary: #f9f9f9;
-      --accent: #4ecca3;
+      --accent: red;
       --dark: #1e1e1e;
       --light: #ffffff;
     }
@@ -98,7 +98,7 @@
 
     #overlay-box {
       position: absolute;
-      border: 2px dashed red;
+      border: 2px dashed var(--accent);
       top: 80px;
       left: 50%;
       width: 80px;
@@ -113,7 +113,7 @@
       margin: 30px auto;
       padding: 12px 28px;
       font-size: 16px;
-      background-color: var(--accent);
+      background-color: #4ecca3;
       color: white;
       border: none;
       border-radius: 8px;
