--- a/templates/theory.html
+++ b/templates/theory.html
@@ -57,11 +57,11 @@
 
     <h2>From Light to Heartbeats</h2>
     <ul>
-      <li>We record a short video (10–20 seconds) of your finger covering the camera.</li>
-      <li>We extract each frame's red channel average to get a time-series signal.</li>
+      <li> A short video (10–20 seconds) of your finger covering the camera is recorded.</li>
+      <li> Each frame's red channel average is extracted to get a time-series signal.</li>
       <li>This signal will look like a repeating wave — <strong>each peak = one heartbeat</strong>.</li>
-      <li>We detect these peaks and count how many occur in one minute (or extrapolate from 15s).</li>
-      <li>Finally, we calculate your <strong>BPM (beats per minute)</strong> using:  
+      <li>These peaks are detected and count how many occur in one minute (or extrapolate from 15s).</li>
+      <li>Finally,  your <strong>BPM (beats per minute) is calculated </strong> using:  
         <code>BPM = (Number of Peaks / Time in seconds) × 60</code>
       </li>
     </ul>
@@ -76,7 +76,7 @@
 
     <h2> Inspired by Real Tech</h2>
     <p>
-      Our method is based on <strong>photoplethysmography (PPG)</strong>, the same principle used in pulse oximeters and smartwatches. It’s a non-invasive way to measure blood volume changes using light.
+      The method is based on <strong>photoplethysmography (PPG)</strong>, the same principle used in pulse oximeters and smartwatches. It’s a non-invasive way to measure blood volume changes using light.
     </p>
 
     <p>Your webcam + smart code = real heart rate</p>
