--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@
     }
 
     .btn.primary {
-      background: var(--primary);
+      background: transparent;
       color: white;
       border: none;
     }
