--- a/templates/index.html
+++ b/templates/index.html
@@ -142,6 +142,8 @@
       border-top: 1px solid #ddd;
     }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7378987771428327"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <header class="navbar">
