--- a/templates/result.html
+++ b/templates/result.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7378987771428327"
+     crossorigin="anonymous"></script>
   <meta charset="UTF-8" />
   <title>PulseSense - Measurement Result</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
