--- a/templates/measure.html
+++ b/templates/measure.html
@@ -131,13 +131,9 @@
     }
 
     footer {
-      background-color: var(--primary);
-      color: #1e1e1e;
-      text-align: center;
-      padding: 16px 0;
-      margin-top: 60px;
-      font-size: 14px;
-      font-weight: 500;
+      
+      margin-top: auto;
+      
     }
   </style>
 </head>
@@ -255,5 +251,11 @@
       }, interval);
     }
   </script>
+  <!-- Footer -->
+<footer style="background:#f2f2f2; padding: 20px 10px; text-align:center; font-size:14px; color:#555; margin-top:40px;">
+  Designed by <strong>Anugya</strong><br>
+  © 2025 | <a href="/privacy" style="color:#cfc2c6; text-decoration:none;">Privacy Policy</a>
+</footer>
+
 </body>
 </html>
