--- a/templates/result.html
+++ b/templates/result.html
@@ -166,5 +166,11 @@
       }
     });
   </script>
+   <!-- Footer -->
+<footer style="background:#f2f2f2; padding: 20px 10px; text-align:center; font-size:14px; color:#555; margin-top:40px;">
+  Designed by <strong>Anugya</strong><br>
+  © 2025 | <a href="/privacy" style="color:#cfc2c6; text-decoration:none;">Privacy Policy</a>
+</footer>
+
 </body>
 </html>
