--- a/templates/theory.html
+++ b/templates/theory.html
@@ -84,8 +84,14 @@
     <p>Your webcam + smart code = real heart rate</p>
   </div>
 
-  <footer>
-    <p>&copy; 2025 PulseDetect. Built with ❤️ using Python and OpenCV.</p>
+  
+     
+<footer style="background:#f2f2f2; padding: 20px 10px; text-align:center; font-size:14px; color:#555; margin-top:40px;">
+  <p>&copy; 2025 PulseDetect. Built with ❤️ using Python and OpenCV.</p>
+  Designed by <strong>Anugya</strong><br>
+  © 2025 | <a href="/privacy" style="color:#cfc2c6; text-decoration:none;">Privacy Policy</a>
+
+
   </footer>
 
   <script src="{{ url_for('static', filename='script.js') }}"></script>
