--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -113,5 +113,11 @@
     </div>
 
   </div>
+  <!-- Footer -->
+<footer style="background:#cfc2c6; padding: 20px 10px; text-align:center; font-size:14px; color:#555; margin-top:40px;">
+  Designed by <strong>Anugya</strong><br>
+  © 2025 | <a href="/privacy" style="color:#0077cc; text-decoration:none;">Privacy Policy</a>
+</footer>
+
 </body>
 </html>
