--- a/templates/result.html
+++ b/templates/result.html
@@ -167,10 +167,13 @@
     });
   </script>
    <!-- Footer -->
-<footer style="background:#f2f2f2; padding: 20px 10px; text-align:center; font-size:14px; color:#555; margin-top:40px;">
+<footer style="background:#cfc2c6; padding: 20px 10px; text-align:center; font-size:14px; color:#555; margin-top:40px;">
+  <p>&copy; 2025 PulseDetect. Built with ❤️ using Python and OpenCV.</p>
   Designed by <strong>Anugya</strong><br>
-  © 2025 | <a href="/privacy" style="color:#cfc2c6; text-decoration:none;">Privacy Policy</a>
-</footer>
+  © 2025 | <a href="/privacy" style="color:#0077cc; text-decoration:none;">Privacy Policy</a>
+
+
+  </footer>
 
 </body>
 </html>
