--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -22,6 +22,8 @@
   </style>
 </head>
 <body>
+ <p><a href="{{ url_for('index') }}">← Back to Home</a></p>
+
   <h1>Privacy Policy</h1>
 
   <p><strong>Effective Date:</strong> June 4, 2025</p>
@@ -38,13 +40,13 @@
   <ul>
     <li>We use <strong>Google AdSense</strong> to display ads.</li>
     <li>Google may collect cookies and browsing data to serve personalized ads.</li>
-    <li>You can opt out at <a href="https://www.google.com/settings/ads" target="_blank">Google Ad Settings</a>.</li>
+    <li>You can opt out at <a href="https://www.google.com/settings/ads" target="_blank" rel="noopener noreferrer">Google Ad Settings</a>.</li>
   </ul>
 
   <h3>3. Consent</h3>
   <p>By using this site, you consent to our use of cookies and AdSense.</p>
 
   <h3>4. Contact</h3>
-  <p>If you have questions, reach out at: <em>https://github.com/anugya22 </em></p>
+  <p>If you have questions, reach out at: <em>https://github.com/anugya22</em></p>
 </body>
 </html>
