--- a/templates/theory.html
+++ b/templates/theory.html
@@ -87,9 +87,9 @@
   
      
 <footer style="background:#cfc2c6; padding: 20px 10px; text-align:center; font-size:14px; color:#555; margin-top:40px;">
-  <p>&copy; 2025 PulseDetect. Built with ❤️ using Python and OpenCV.</p>
+  <p>&copy; 2025 PulseDetect. Built using Python and OpenCV.</p>
   Designed by <strong>Anugya</strong><br>
-  © 2025 | <a href="/privacy" style="color:#0077cc; text-decoration:none;">Privacy Policy</a>
+   | <a href="/privacy" style="color:#0077cc; text-decoration:none;">Privacy Policy</a>
 
 
   </footer>
