--- a/templates/measure.html
+++ b/templates/measure.html
@@ -143,7 +143,7 @@
   <div class="container">
     <h2>
       Place the <strong>tip</strong> of your index finger inside the red box below<br />
-      and click <strong>Start Measurement</strong>. Hold it there for exactly 7 seconds.
+      and click <strong>Start Measurement</strong> for the camera to start. Hold it there for exactly 10 seconds.
     </h2>
 
     <div class="flex-example-video">
