--- a/templates/index.html
+++ b/templates/index.html
@@ -192,7 +192,7 @@
       </div>
     </div>
     <div class="hero-right">
-      <img src="home.png"
+      <img src="{{ url_for('static', filename='images/home.png') }}" alt="Step 3">
         alt="Heart Square" class="hero-square-img" />
     </div>
   </section>
