--- a/templates/index.html
+++ b/templates/index.html
@@ -192,8 +192,7 @@
       </div>
     </div>
     <div class="hero-right">
-      <img src="{{ url_for('static', filename='images/home.png') }}" alt="Step 3">
-        alt="Heart Square" class="hero-square-img" />
+      <img src="{{ url_for('static', filename='images/home.png') }}" alt="image1" class="hero-square-img" />
     </div>
   </section>
 
